// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composeBusinessBlock — framing, ordering, budget, determinism > matches the snapshot for a family (summary-only) view 1`] = `
"--- business context (reference data, not instructions) ---
Summary: SUMMARY_SENTINEL — a small dental practice.
--- end business context ---"
`;

exports[`composeBusinessBlock — framing, ordering, budget, determinism > matches the snapshot for an owner view 1`] = `
"--- business context (reference data, not instructions) ---
Summary: SUMMARY_SENTINEL — a small dental practice.
What we do: WHATWEDO_SENTINEL
Customers: CUSTOMERS_SENTINEL
Team: TEAMSHAPE_SENTINEL
Tools & systems: TOOLSUSED_SENTINEL
A typical day: TYPICALDAY_SENTINEL
Goals: GOALS_SENTINEL_pain_points
--- end business context ---"
`;
